--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ php:
   - 5.6
   - 7.0
 
+sudo: false
+
 before_script:
   - wget https://github.com/FriendsOfPHP/pickle/releases/download/v0.4.0/pickle.phar
   - php pickle.phar install xdebug
