Add xunit/clover reports for sonar
Add xunit and clover report which valid xsd for sonar integration. Using
generic tests coverage report.

To use it
```php
$xunit = new \mageekguy\atoum\reports\sonar\xunit();
$writer = new \mageekguy\atoum\writers\file('./sonar-xunit.xml');
$xunit->addWriter($writer);
$runner->addReport($xunit);

$clover = new \mageekguy\atoum\reports\sonar\clover();
$writer = new \mageekguy\atoum\writers\file('./sonar-clover.xml');
$clover->addWriter($writer);
$runner->addReport($clover);
```

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ before_script:
   - composer update $COMPOSER_PREFER
 
 script:
-  - vendor/bin/atoum --test-ext -p 'php -n'
+  - vendor/bin/atoum --test-ext -p 'php -n -ddate.timezone=UTC'
