--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
   - 5.5
   - 5.6
   - 7.0
@@ -14,4 +12,4 @@ before_script:
   - composer install
 
 script:
-  - vendor/bin/atoum --test-ext
+  - vendor/bin/atoum --test-ext -p 'php -n'
