--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         }
     ],
     "require": {
+        "php": ">=5.5.0",
         "twig/twig": "~1.18",
-        "symfony/filesystem": "~2.6"
+        "symfony/filesystem": "~2.6",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "atoum/atoum": "~2.1"
