--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "twig/twig": "~1.18",
-        "symfony/filesystem": "~2.6",
+        "twig/twig": "^1.18",
+        "symfony/filesystem": "^2.6 | ^3.0",
         "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
-        "atoum/atoum": "~2.1"
+        "atoum/atoum": "^2.5.1"
     },
     "autoload": {
         "psr-4": {
