Add Atom, PHPStorm and Vim to telemetry environments
Closes #13

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,10 @@
             "mageekguy\\atoum\\reports\\": "classes"
         },
         "files": ["autoloader.php"]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.x-dev"
+        }
     }
 }
