--- a/composer.json
+++ b/composer.json
@@ -11,26 +11,17 @@
             "email": "contact@jubianchi.fr"
         }
     ],
+    "minimum-stability": "beta",
     "require": {
         "php": ">=5.4.0",
         "twig/twig": "^1.18",
-        "symfony/filesystem": "^2.6 | ^3.0"
-    },
-    "require-dev": {
-        "atoum/atoum": "^2.5.1"
+        "symfony/filesystem": "^2.6 | ^3.0",
+        "atoum/atoum": "^2.9"
     },
     "autoload": {
         "psr-4": {
             "mageekguy\\atoum\\reports\\": "classes"
         },
-        "files": ["autoloader.php"]
-    },
-    "autoload-dev": {
-        "files": ["tests/autoloader.php"]
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.x-dev"
-        }
+        "files": ["configuration.php"]
     }
 }
