--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "symfony/filesystem": "^2.6 | ^3.0",
         "atoum/atoum": "^2.9"
     },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "~1.12"
+    },
     "autoload": {
         "psr-4": {
             "mageekguy\\atoum\\reports\\": "classes"
