--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: php
 
 php:
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
+  - nightly
 
 sudo: false
 
 cache:
   directories:
     - vendor
+
+matrix:
+  allow_failures:
+    - php: nightly
 
 env:
   matrix:
