--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
             "email": "contact@jubianchi.fr"
         }
     ],
-    "minimum-stability": "beta",
+    "minimum-stability": "dev",
     "require": {
-        "php": ">=5.4.0",
-        "twig/twig": "^1.18",
+        "php": "^5.6.0 || ^7.0.0",
+        "twig/twig": "^1.18 | ^2.0",
         "symfony/filesystem": "^2.6 | ^3.0",
         "atoum/atoum": "^3.0"
     },
