--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,35 @@
 language: php
 
 php:
+  - 5.4
+  - 5.5
   - 5.6
   - 7.0
+  - 7.1
   - nightly
-
-sudo: false
 
 cache:
   directories:
     - vendor
 
-matrix:
-  allow_failures:
-    - php: nightly
+sudo: false
 
 env:
   matrix:
     - COMPOSER_PREFER="--prefer-stable"
     - COMPOSER_PREFER="--prefer-lowest"
 
-before_script:
-  - php -v
-  - composer update $COMPOSER_PREFER
+matrix:
+  allow_failures:
+    - php: nightly
+  exclude:
+    - php: 7.0
+      env: COMPOSER_PREFER="--prefer-lowest"
+    - php: 7.1
+      env: COMPOSER_PREFER="--prefer-lowest"
+    - php: nightly
+      env: COMPOSER_PREFER="--prefer-lowest"
 
 script:
-  - vendor/bin/atoum --test-ext -p 'php -n -ddate.timezone=UTC'
+  - composer update $COMPOSER_PREFER
+  - vendor/bin/atoum --test-ext
