--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^5.6.0 || ^7.0.0",
+        "php": "^5.4.0 || ^7.0.0",
         "twig/twig": "^1.18 | ^2.0",
         "symfony/filesystem": "^2.6 | ^3.0",
-        "atoum/atoum": "^3.0"
+        "atoum/atoum": "^2.9 | ^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~1.12"
