--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "atoum/atoum": "^2.9 | ^3.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "~1.12"
+        "friendsofphp/php-cs-fixer": "^2"
     },
     "autoload": {
         "psr-4": {
