--- a/resources/configurations/runner/santa.php.dist
+++ b/resources/configurations/runner/santa.php.dist
@@ -5,7 +5,7 @@ Sample atoum configuration file to use the Santa report
 Do "php path/to/test/file -c path/to/this/file" or "php path/to/atoum/scripts/runner.php -c path/to/this/file -f path/to/test/file" to use it.
 */
 
-use \mageekguy\atoum;
+use mageekguy\atoum;
 
 /*
 Write all on stdout.
