refactor: Remove the telemetry
Closes #44

BREAKING CHANGE: Install the telemetry-extension to use the telemetry report

--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
             "email": "contact@jubianchi.fr"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "beta",
     "require": {
         "php": "^5.4.0 || ^7.0.0",
         "twig/twig": "^1.18 | ^2.0",
         "symfony/filesystem": "^2.6 | ^3.0",
-        "atoum/atoum": "^2.9 | ^3.0"
+        "atoum/atoum": "^2.9 || ^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2"
