--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
   - 5.6
   - 7.0
   - 7.1
+  - 8.0
   - nightly
 
 cache:
@@ -26,6 +27,8 @@ matrix:
     - php: 7.0
       env: COMPOSER_PREFER="--prefer-lowest"
     - php: 7.1
+      env: COMPOSER_PREFER="--prefer-lowest"
+    - php: 8.0
       env: COMPOSER_PREFER="--prefer-lowest"
     - php: nightly
       env: COMPOSER_PREFER="--prefer-lowest"
