--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,17 @@
     ],
     "minimum-stability": "beta",
     "require": {
-        "php": "^5.4.0 || ^7.0.0",
+        "php": "^5.4.0 || ^7.0.0 || ^8.0.0",
         "twig/twig": "^1.18 | ^2.0",
         "symfony/filesystem": "^2.6 | ^3.0 | ^4.0",
-        "atoum/atoum": "^2.9 || ^3.0"
+        "atoum/atoum": "^2.9 || ^3.0 || ^4.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2"
     },
     "autoload": {
         "psr-4": {
-            "mageekguy\\atoum\\reports\\": "classes"
+            "atoum\\atoum\\reports\\": "classes"
         },
         "files": ["configuration.php"]
     }
